added diagrams to docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -8,7 +8,8 @@
     "docsify-copy-code": "^2.0.2",
     "docsify-themeable": "^0.3.0",
     "mermaid": "^8.0.0-rc.8",
-    "prismjs": "^1.15.0"
+    "prismjs": "^1.15.0",
+    "yuml-diagram": "^1.0.8"
   },
   "devDependencies": {},
   "scripts": {
