--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -21,7 +21,7 @@ init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 service.typesystem.rest.port=19000
 
 # HIBERNATE
-service.persistene.transaction.timeout=60
+service.persistene.transaction.timeout=600
 service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=true
 service.persistence.hibernate.hbm2ddl.auto=none
@@ -30,8 +30,8 @@ service.persistence.sequencegenerator.poolsize=50
 
 # HIBERNATE CHACING
 hibernate.cache.use_second_level_cache=true
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 hibernate.cache.use_query_cache=true
-hibernate.cache.region.factory_class=ehcache
 
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
@@ -55,9 +55,9 @@ database.jdbc.password=
 
 # MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
-#service.persistence.hibernate.dialect.storage_engine=innodb
-#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
-#database.jdbc.username=root
-#database.jdbc.password=
+service.persistence.hibernate.dialect.storage_engine=innodb
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
+database.jdbc.username=root
+database.jdbc.password=
