--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -55,9 +55,9 @@ database.jdbc.password=
 
 # MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
-service.persistence.hibernate.dialect.storage_engine=innodb
-service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
-database.jdbc.username=root
-database.jdbc.password=
+#service.persistence.hibernate.dialect.storage_engine=innodb
+#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
+#database.jdbc.username=root
+#database.jdbc.password=
