optimized item deserializer, enabled caching for queries, added some logging and ehcache configs

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -23,7 +23,7 @@ service.typesystem.rest.port=19000
 # HIBERNATE
 service.persistene.transaction.timeout=600
 service.persistence.hibernate.show_sql=false
-service.persistence.hibernate.format_sql=true
+service.persistence.hibernate.format_sql=false
 service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
 service.persistence.sequencegenerator.poolsize=50
