--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -29,9 +29,10 @@ service.persistence.hibernate.enable_lazy_load_no_trans=true
 service.persistence.sequencegenerator.poolsize=50
 
 # HIBERNATE CHACING
-hibernate.cache.use_second_level_cache=true
+hibernate.cache.use_second_level_cache=false
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
-hibernate.cache.use_query_cache=true
+hibernate.cache.use_query_cache=false
+hibernate.jdbc.batch_size=200
 
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
@@ -55,9 +56,9 @@ database.jdbc.password=
 
 # MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
-#service.persistence.hibernate.dialect.storage_engine=innodb
-#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true
-#database.jdbc.username=root
-#database.jdbc.password=
+service.persistence.hibernate.dialect.storage_engine=innodb
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true&rewriteBatchedStatements=true
+database.jdbc.username=root
+database.jdbc.password=
