--- a/pom.xml
+++ b/pom.xml
@@ -305,6 +305,11 @@
 				<plugin>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.1.0</version>
+					<configuration>
+						<nonFilteredFileExtensions>
+							<nonFilteredFileExtension>jks</nonFilteredFileExtension>
+						</nonFilteredFileExtensions>
+					</configuration>
 				</plugin>
 
 				<plugin>
