--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -23,12 +23,7 @@
 				<artifactId>aspectj-maven-plugin</artifactId>
 				<configuration>
 					<!-- include hibernate to enable persistencecontext fix -->
-					<!-- <weaveDependencies>
-						<weaveDependency>
-							<groupId>org.hibernate</groupId>
-							<artifactId>hibernate-core</artifactId>
-						</weaveDependency>
-					</weaveDependencies> -->
+					<!-- <weaveDependencies> <weaveDependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> </weaveDependency> </weaveDependencies> -->
 				</configuration>
 			</plugin>
 
@@ -82,6 +77,14 @@
 			</plugin>
 
 		</plugins>
+
+		<extensions>
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.6.0</version>
+			</extension>
+		</extensions>
 	</build>
 
 	<dependencies>
@@ -184,7 +187,7 @@
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>5.2.17.Final</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -228,7 +231,13 @@
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
-			<version>2.7.2</version>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.conscrypt</groupId>
+			<artifactId>conscrypt-openjdk</artifactId>
+			<version>1.4.0</version>
+			<classifier>${os.detected.classifier}</classifier>
 		</dependency>
 
 		<!-- REST TESTING -->
