ssl for rest endpoints and small refactoring

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -19,6 +19,9 @@ init.default.admin.username=admin
 init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 
 service.typesystem.rest.port=19000
+# set these values to enable SSL
+service.typesystem.rest.keystore.file=/keystore.jks
+service.typesystem.rest.keystore.password=atcP}U#P[%Y794+U
 
 # HIBERNATE
 service.persistene.transaction.timeout=600
