refactored log aspect, added index definition to itemtypes.xsd, added some more logging

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -20,8 +20,8 @@ init.default.admin.password=MD5:ee10c315eba2c75b403ea99136f5b48d
 
 service.typesystem.rest.port=19000
 # set these values to enable SSL
-service.typesystem.rest.keystore.file=/keystore.jks
-service.typesystem.rest.keystore.password=atcP}U#P[%Y794+U
+#service.typesystem.rest.keystore.file=/keystore.jks
+#service.typesystem.rest.keystore.password=atcP}U#P[%Y794+U
 
 # HIBERNATE
 service.persistene.transaction.timeout=600
@@ -59,9 +59,9 @@ database.jdbc.password=
 
 # MYSQL
 # WARNING: never use MyISAM tables as then transactions don't work
-#service.persistence.hibernate.dialect.storage_engine=innodb
-#service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-#database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true&rewriteBatchedStatements=true
-#database.jdbc.username=root
-#database.jdbc.password=
+service.persistence.hibernate.dialect.storage_engine=innodb
+service.persistence.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+database.jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+database.jdbc.url=jdbc:mysql://localhost/spot?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&reateDatabaseIfNotExist=true&rewriteBatchedStatements=true
+database.jdbc.username=root
+database.jdbc.password=
