small build fixes, changelog updated

--- a/spot-core/src/main/resources/core-testing.properties
+++ b/spot-core/src/main/resources/core-testing.properties
@@ -25,7 +25,7 @@ service.persistence.hibernate.format_sql=false
 service.persistence.hibernate.dialect.storage_engine=
 service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-database.jdbc.url=jdbc:hsqldb:mem:spot-core-test
+database.jdbc.url=jdbc:hsqldb:mem:spot-core-test;shutdown=true
 database.jdbc.username=sa
 database.jdbc.password=
 
