added support for index automatic creation on properties

--- a/spot-core/src/main/resources/core-testing.properties
+++ b/spot-core/src/main/resources/core-testing.properties
@@ -23,7 +23,7 @@ service.persistence.hibernate.format_sql=false
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
 service.persistence.hibernate.dialect.storage_engine=
-service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+service.persistence.hibernate.dialect=io.spotnext.core.persistence.hibernate.impl.HsqlDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
 database.jdbc.url=jdbc:hsqldb:mem:spot-core-test;shutdown=true
 database.jdbc.username=sa
@@ -32,7 +32,7 @@ database.jdbc.password=
 # H2
 #h2.implicitRelativePath=true
 #service.persistence.hibernate.dialect.storage_engine=
-#service.persistence.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#service.persistence.hibernate.dialect=io.spotnext.core.persistence.hibernate.impl.H2Dialect
 #database.jdbc.driverClassName=org.h2.Driver
 #database.jdbc.url=jdbc:h2:mem:spot-core_testing
 #database.jdbc.username=sa
