--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -40,7 +40,7 @@ hibernate.jdbc.batch_size=200
 # JDBC configuration, used by JPA and JDO persistence
 # HSQL
 service.persistence.hibernate.dialect.storage_engine=
-service.persistence.hibernate.dialect=org.hibernate.dialect.HSQLDialect
+service.persistence.hibernate.dialect=io.spotnext.core.persistence.hibernate.impl.HsqlDialect
 database.jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
 database.jdbc.url=jdbc:hsqldb:file:data/store/spot.hsql
 database.jdbc.username=sa
@@ -51,7 +51,7 @@ database.jdbc.password=
 #spring.h2.console.path=/h2-console
 #h2.implicitRelativePath=true
 #service.persistence.hibernate.dialect.storage_engine=
-#service.persistence.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#service.persistence.hibernate.dialect=io.spotnext.core.persistence.hibernate.impl.H2Dialect
 #database.jdbc.driverClassName=org.h2.Driver
 #database.jdbc.url=jdbc:h2:file:./data/store/spot.h2
 #database.jdbc.username=sa
