small DB performance optimizations

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -29,6 +29,7 @@ service.persistence.hibernate.show_sql=false
 service.persistence.hibernate.format_sql=false
 service.persistence.hibernate.hbm2ddl.auto=none
 service.persistence.hibernate.enable_lazy_load_no_trans=true
+service.persistence.hibernate.generate_statistics=false
 service.persistence.sequencegenerator.poolsize=50
 
 # HIBERNATE CHACING
