--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -159,6 +159,11 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.9.7</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.woodstox</groupId>
+			<artifactId>woodstox-core-asl</artifactId>
+			<version>4.1.4</version>
+		</dependency>
 
 		<!-- spring -->
 		<dependency>
