--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -17,15 +17,20 @@
 
 	<build>
 		<plugins>
-			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>aspectj-maven-plugin</artifactId>
-				<configuration>
-					<!-- include hibernate to enable persistencecontext fix -->
-					<!-- <weaveDependencies> <weaveDependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> </weaveDependency> </weaveDependencies> -->
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
 			</plugin>
+
+			<!-- COMPILING -->
+			<!-- <plugin> -->
+			<!-- <groupId>org.codehaus.mojo</groupId> -->
+			<!-- <artifactId>aspectj-maven-plugin</artifactId> -->
+			<!-- <configuration> -->
+			<!-- include hibernate to enable persistencecontext fix -->
+			<!-- <weaveDependencies> <weaveDependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> </weaveDependency> </weaveDependencies> -->
+			<!-- </configuration> -->
+			<!-- </plugin> -->
 
 			<!-- RESOURCE GENERTATION -->
 			<plugin>
