--- a/spot-core-infrastructure/pom.xml
+++ b/spot-core-infrastructure/pom.xml
@@ -16,8 +16,8 @@
 		<plugins>
 			<!-- COMPILING -->
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>aspectj-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
 			</plugin>
 
 			<!-- CODE ANALYSIS -->
