spring boot update (lots of refactoring/fixes)

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -32,7 +32,7 @@ service.persistence.hibernate.enable_lazy_load_no_trans=true
 service.persistence.hibernate.generate_statistics=false
 service.persistence.sequencegenerator.poolsize=50
 
-# HIBERNATE CHACING
+# HIBERNATE CACHING
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 hibernate.cache.use_query_cache=false
