--- a/pom.xml
+++ b/pom.xml
@@ -215,7 +215,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>flatten-maven-plugin</artifactId>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
@@ -325,27 +325,28 @@
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 						<useIncrementalCompilation>true</useIncrementalCompilation>
-						<skip>true</skip>
-						<skipMain>true</skipMain>
+						<!-- <skip>true</skip> -->
+						<!-- <skipMain>true</skipMain> -->
 					</configuration>
-					<executions>
-						<execution>
-							<id>default-compile</id>
-							<phase>none</phase>
-							<goals>
-								<goal>compile</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>default-test-compile</id>
-							<phase>none</phase>
-							<goals>
-								<goal>test-compile</goal>
-							</goals>
-						</execution>
-					</executions>
+					<!-- <executions> -->
+					<!-- <execution> -->
+					<!-- <id>default-compile</id> -->
+					<!-- <phase>none</phase> -->
+					<!-- <goals> -->
+					<!-- <goal>compile</goal> -->
+					<!-- </goals> -->
+					<!-- </execution> -->
+					<!-- <execution> -->
+					<!-- <id>default-test-compile</id> -->
+					<!-- <phase>none</phase> -->
+					<!-- <goals> -->
+					<!-- <goal>test-compile</goal> -->
+					<!-- </goals> -->
+					<!-- </execution> -->
+					<!-- </executions> -->
 				</plugin>
 
+				<!-- aspectj weaving is done at load-time -->
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>aspectj-maven-plugin</artifactId>
@@ -373,7 +374,7 @@
 							</aspectLibrary>
 						</aspectLibraries>
 
-						<!-- setting this to true can cause build errors im M2E -->
+						setting this to true can cause build errors im M2E
 						<showWeaveInfo>true</showWeaveInfo>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
@@ -389,11 +390,7 @@
 					</configuration>
 					<executions>
 						<execution>
-							<goals>
-								<!-- IMPORTANT -->
-								<goal>compile</goal>
-								<goal>test-compile</goal>
-							</goals>
+							<phase>none</phase>
 						</execution>
 					</executions>
 				</plugin>
@@ -426,6 +423,10 @@
 							<goals>
 								<goal>transform-types</goal>
 							</goals>
+							<configuration>
+								<!-- done by load-time-weaver, therefore we skip it there -->
+								<skip>true</skip>
+							</configuration>
 						</execution>
 						<execution>
 							<id>Item type post-processing (test)</id>
@@ -752,11 +753,11 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute>
-											<runOnIncremental>true</runOnIncremental>
-											<runOnConfiguration>true</runOnConfiguration>
-										</execute>
-										<!-- <ignore /> -->
+<!-- 										<execute> -->
+<!-- 											<runOnIncremental>true</runOnIncremental> -->
+<!-- 											<runOnConfiguration>true</runOnConfiguration> -->
+<!-- 										</execute> -->
+										<ignore />
 									</action>
 								</pluginExecution>
 								<pluginExecution>
@@ -771,11 +772,11 @@
 										</goals>
 									</pluginExecutionFilter>
 									<action>
-										<execute>
-											<runOnIncremental>true</runOnIncremental>
-											<runOnConfiguration>true</runOnConfiguration>
-										</execute>
-										<!-- <ignore /> -->
+<!-- 										<execute> -->
+<!-- 											<runOnIncremental>true</runOnIncremental> -->
+<!-- 											<runOnConfiguration>true</runOnConfiguration> -->
+<!-- 										</execute> -->
+										<ignore />
 									</action>
 								</pluginExecution>
 								<pluginExecution>
