dependency cleanup & version upgrades,

--- a/spot-core-infrastructure/pom.xml
+++ b/spot-core-infrastructure/pom.xml
@@ -59,11 +59,12 @@
 			<groupId>io.spot-next</groupId>
 			<artifactId>spot-instrumentation</artifactId>
 			<version>${revision}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.23.1-GA</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.javassist</groupId>
+					<artifactId>javassist</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
