--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -17,16 +17,6 @@
 
 	<build>
 		<plugins>
-			<!-- COMPILING -->
-<!-- 			<plugin> -->
-<!-- 				<groupId>org.codehaus.mojo</groupId> -->
-<!-- 				<artifactId>aspectj-maven-plugin</artifactId> -->
-<!-- 				<configuration> -->
-					<!-- include hibernate to enable persistencecontext fix -->
-					<!-- <weaveDependencies> <weaveDependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-core</artifactId> </weaveDependency> </weaveDependencies> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-
 			<!-- RESOURCE GENERTATION -->
 			<plugin>
 				<groupId>io.spot-next</groupId>
@@ -96,7 +86,12 @@
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
-			<version>4.2</version>
+			<version>4.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-cli</groupId>
@@ -135,11 +130,6 @@
 			<version>1</version>
 		</dependency>
 		<dependency>
-			<groupId>io.gsonfire</groupId>
-			<artifactId>gson-fire</artifactId>
-			<version>1.8.3</version>
-		</dependency>
-		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.9.7</version>
@@ -157,7 +147,7 @@
 		<dependency>
 			<groupId>org.codehaus.woodstox</groupId>
 			<artifactId>woodstox-core-asl</artifactId>
-			<version>4.1.4</version>
+			<version>4.4.1</version>
 		</dependency>
 
 		<!-- spring -->
@@ -172,11 +162,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework</groupId> -->
-<!-- 			<artifactId>spring-orm</artifactId> -->
-<!-- 			<version>${spring.version}</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring-orm</artifactId> -->
+		<!-- <version>${spring.version}</version> -->
+		<!-- </dependency> -->
 
 		<!-- persistence -->
 		<dependency>
@@ -198,25 +188,25 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.8-dmr</version>
+			<version>8.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
-			<version>2.7.7</version>
+			<version>3.2.0</version>
 		</dependency>
 
 		<!-- JPA query -->
-		<dependency>
-			<groupId>org.torpedoquery</groupId>
-			<artifactId>org.torpedoquery</artifactId>
-			<version>2.5.1</version>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.torpedoquery</groupId> -->
+		<!-- <artifactId>org.torpedoquery</artifactId> -->
+		<!-- <version>2.5.1</version> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>com.trigersoft</groupId>
 			<artifactId>jaque</artifactId>
-			<version>2.1.2</version>
+			<version>2.4.0</version>
 		</dependency>
 
 		<!-- spark rest framework -->
@@ -228,14 +218,14 @@
 		<dependency>
 			<groupId>org.conscrypt</groupId>
 			<artifactId>conscrypt-openjdk-uber</artifactId>
-			<version>1.4.0</version>
+			<version>1.4.1</version>
 		</dependency>
 
 		<!-- REST TESTING -->
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
-			<version>3.1.1</version>
+			<version>3.2.0</version>
 			<scope>test</scope>
 		</dependency>
 
