--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -110,10 +110,22 @@
 			<!-- <scope>provided</scope> -->
 		</dependency>
 
+		<!-- <dependency> -->
+		<!-- <groupId>com.github.rotty3000</groupId> -->
+		<!-- <artifactId>jalopy</artifactId> -->
+		<!-- <version>3000.0.0</version> -->
+		<!-- </dependency> -->
+
 		<dependency>
-			<groupId>com.github.rotty3000</groupId>
-			<artifactId>jalopy</artifactId>
-			<version>3000.0.0</version>
+			<groupId>org.jboss.forge.roaster</groupId>
+			<artifactId>roaster-api</artifactId>
+			<version>2.20.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.roaster</groupId>
+			<artifactId>roaster-jdt</artifactId>
+			<version>2.20.1.Final</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
