logging format changed, fixed instrumentation agent (again)

--- a/spot-core/src/main/resources/core.properties
+++ b/spot-core/src/main/resources/core.properties
@@ -1,9 +1,4 @@
-# LOGGING
-logging.level.root=INFO
-logging.level.io.spotnext.core=WARN
-logging.level.io.spotnext.core.persistence=INFO
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate=INFO
+spring.output.ansi.enabled=ALWAYS
 
 # SPOT
 # SETUP flags, can also be passed via command line
