--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -109,12 +109,12 @@
 			<version>3.6.0</version>
 			<!-- <scope>provided</scope> -->
 		</dependency>
-
-		<!-- <dependency> -->
-		<!-- <groupId>com.github.rotty3000</groupId> -->
-		<!-- <artifactId>jalopy</artifactId> -->
-		<!-- <version>3000.0.0</version> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-artifact</artifactId>
+			<version>3.6.0</version>
+			<!-- <scope>provided</scope> -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.forge.roaster</groupId>
