--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,9 @@
 		<contributor>
 			<name>Thomas Rotter</name>
 		</contributor>
+		<contributor>
+			<name>Benjamin Nussbaum</name>
+		</contributor>
 	</contributors>
 
 	<licenses>
