removed some javax.annotations from instrumentation and core-support

--- a/spot-maven-plugin/pom.xml
+++ b/spot-maven-plugin/pom.xml
@@ -156,6 +156,12 @@
 			<version>2.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
 		<!-- Eclipse integration -->
 		<dependency>
 			<groupId>org.sonatype.plexus</groupId>
