--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<log4j.version>2.11.1</log4j.version>
 		<junit.version>4.12</junit.version>
+		<junit.jupiter.version>5.3.1</junit.jupiter.version>
 		<spring.boot.version>2.1.0.RELEASE</spring.boot.version>
 		<spring.version>5.1.2.RELEASE</spring.version>
 
