--- a/spot-core/pom.xml
+++ b/spot-core/pom.xml
@@ -17,6 +17,18 @@
 
 	<build>
 		<plugins>
+			<!-- COMPILING -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<compilerArg>--patch-module</compilerArg>
+						<compilerArg>hamcrest.library=${user.home}/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar</compilerArg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		
 			<!-- RESOURCE GENERTATION -->
 			<plugin>
 				<groupId>io.spot-next</groupId>
